--- a/src/components/VirtualController.module.css
+++ b/src/components/VirtualController.module.css
@@ -25,7 +25,7 @@
 
 .encoders {
   composes: gridContainer listReset;
-  flex: 0 0 70%;
+  flex: 0 0 60%;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   border-bottom: 1px solid black;
@@ -55,6 +55,15 @@
 
 .encoder form button {
   flex: 0 0 auto;
+}
+
+.buttonRow {
+  flex: 0 0 auto;
+  display: flex;
+}
+
+.buttonRow button {
+  flex: 1 1 0px;
 }
 
 .pads {
