--- a/src/components/EliseUI.module.css
+++ b/src/components/EliseUI.module.css
@@ -29,7 +29,50 @@
 }
 
 .display {
-  flex: 1 1 100vh;
+  flex: 0 1 100vh;
+  overflow-y: auto;
+}
+
+.section {
+  display: flex;
+  min-height: 100px;
+  border-bottom: 1px var(--orange) solid;
+}
+
+.section:first-of-type {
+  border-top: 1px var(--orange) solid;
+}
+
+.sectionHeaderContainer {
+  flex: 0 0 auto;
+  position: relative;
+  width: 60px;
+  text-align: center;
+  color: var(--orange);
+  border-right: 1px var(--orange) solid;
+}
+
+.sectionHeaderContainerActive {
+  color: black;
+  background: var(--orange);
+}
+
+.sectionHeader {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%) rotate(-90deg);
+}
+
+.sectionContent {
+  flex: 0 1 100%;
+  padding-left: 10px;
+}
+
+.paramList {
+  composes: gridContainer listReset;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .pads {
