--- a/src/components/EliseUI.module.css
+++ b/src/components/EliseUI.module.css
@@ -121,7 +121,7 @@
 }
 
 .buttonRow button {
-  flex: 1 0 auto;
+  flex: 1 1 0px;
   border: 1px var(--orange) solid;
   background: black;
   color: var(--orange);
