--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --orange: rgb(234, 207, 76);
+  --ui-font-family: consolas, monaco, monospace;
 }
 
 a {
