--- a/src/components/BaseGrid/BaseGrid.module.css
+++ b/src/components/BaseGrid/BaseGrid.module.css
@@ -2,18 +2,16 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 10% 1fr;
-  grid-auto-rows: 1fr;
+  grid-auto-rows: 22px;
 }
 
 .baseGridScroll {
   width: 100%;
   height: 100%;
+  display: grid;
+  grid-auto-rows: 22px;
   overflow-x: hidden;
   overflow-y: scroll;
-  display: grid;
-  grid-template-columns: 10% 1fr;
-  grid-auto-rows: 22px; /* TODO: I'd like to express this as 1/16 of the container  height, but not sure how that works w overflow scroll*/
 }
 
 .rowLabel,
