--- a/src/components/EliseUI.module.css
+++ b/src/components/EliseUI.module.css
@@ -162,3 +162,18 @@
   background: var(--orange);
   color: black;
 }
+
+.gridAndAutomationContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+}
+.gridAndAutomationContainer > :first-child {
+  /* TODO: fits 12 rows in; this doesn't work for grid view*/
+  flex: 0 0 calc(22px * 12);
+}
+.gridAndAutomationContainer > :nth-child(2) {
+  border-top: 1px var(--orange) solid;
+  flex: 1 1 auto;
+}
